# kfilereplace

./: CMakeLists.txt  ChangeLog  Makefile.am  Messages.sh  apistruct.h  commandengine.cpp  commandengine.h  configurationclasses.cpp  configurationclasses.h  configure.in.in  filelib.cpp  filelib.h  kaboutkfilereplace.cpp  kaboutkfilereplace.h  kaddstringdlg.cpp  kaddstringdlg.h  kaddstringdlgs.ui  kconfirmdlg.cpp  kconfirmdlg.h  kconfirmdlgs.ui  kernel.cpp  kernel.h  kexpression.cpp  kexpression.h  kfilereplace.cpp  kfilereplace.desktop  kfilereplace.h  kfilereplace.kdevelop  kfilereplaceadaptor.cpp  kfilereplaceadaptor.h  kfilereplacedoc.cpp  kfilereplacedoc.h  kfilereplaceiface.h  kfilereplacelib.cpp  kfilereplacelib.h  kfilereplacepart.cpp  kfilereplacepart.desktop  kfilereplacepart.h  kfilereplacepartui.rc  kfilereplacepref.cpp  (+23 more)
doc/: CMakeLists.txt  Makefile.am  index.docbook
pics/: Makefile.am
toolbar/: CMakeLists.txt  Makefile.am
