quantadir = $(kde_datadir)/kfilereplacepart/toolbar
quanta_DATA = filereplace.png filesearch.png filesimulate.png filestop.png optbackup.png optcase.png optconfirm.png optwildcards.png optrecursive.png optvar.png resdiropen.png resfiledel.png resfileinfo.png resfileopen.png stradd.png strdel.png stredit.png strempty.png strinvert.png resfileedit.png
