icondir = $(kde_datadir)/kfilereplacepart/toolbar
icon_DATA = filereplace.png filesimulate.png filestop.png lineedit.png backup.png casesensitive.png yesno.png optwildcards.png recursive.png optvar.png resdiropen.png resfiledel.png resfileinfo.png resfileopen.png    strempty.png invert.png resfileedit.png unsortedList.png
